[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/weapon/magazine.png" type="Texture" id=1]
[ext_resource path="res://game/WaterGun.gd" type="Script" id=2]
[ext_resource path="res://textures/weapon/watergun.png" type="Texture" id=3]
[ext_resource path="res://textures/weapon/barrel.png" type="Texture" id=4]
[ext_resource path="res://audio/water_shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://game/spraysfx.gd" type="Script" id=6]

[node name="WaterGun" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9, -5 )
texture = ExtResource( 3 )

[node name="Nozzle" type="Position2D" parent="Sprite"]
position = Vector2( 16, -2 )
__meta__ = {
"_edit_group_": true
}

[node name="Magazine" type="Node2D" parent="Sprite"]
position = Vector2( -3, -7 )
scale = Vector2( 0.878, 0.734 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sprite/Magazine"]
position = Vector2( -8, 0 )
texture = ExtResource( 1 )

[node name="Barrel" type="Node2D" parent="Sprite"]
position = Vector2( 16, -2 )
scale = Vector2( 0.486, 0.502 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sprite/Barrel"]
position = Vector2( 8, 0 )
texture = ExtResource( 4 )

[node name="spraysfx" type="AudioStreamPlayer2D" parent="Sprite/Barrel"]
stream = ExtResource( 5 )
volume_db = 13.0
bus = "SFX"
script = ExtResource( 6 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[connection signal="sprayed_water" from="." to="Sprite/Barrel/spraysfx" method="_on_WaterGun_sprayed_water"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
